--- a/README.org
+++ b/README.org
@@ -28,13 +28,13 @@ fit using a training dataset.
 
 Rather than relying on standard choices for explanatory factors, one
 may opt to learn them from within the simplest class of possible
-choices, namely linear combinations of past returns in a window of
-width $D$:
+choices, namely linear combinations of past returns in a window of depth $D$:
 
 $$ E_ {t,\ell} \coloneqq \sum_ {d=1}^D R_ {t+1-d}A_ {d,\ell} $$
 
 where $A\in\mathrm{Mat}_ {D,F}(\mathbb{R})$ is a $D\times F$
-matrix. Enforcing orthonormality between the columns of $A$ reduces
+matrix and $D>F$. Let us denote the columns of $A$ by
+$A_1,\ldots,A_F\in\mathbb{R}^D$ where $(A_\ell)_d \coloneqq A_ {d,\ell}$. Enforcing orthonormality between the columns of $A$ reduces
 redundancy in the model, but adds a non-linear constraint to the
 model's parameter space: $A^TA = I_F$. This constraint defines a /Stiefel manifold/, a
 generalization of the orthogonal group. There are multiple methods for
@@ -45,9 +45,34 @@ following options:
 3. using [[#penalties][penalties]];
 4. using [[#lagrange-multipliers][Lagrange multipliers]].
 
+** Challenge Goals
+#+BEGIN_QUOTE
+The goal of this challenge is to design/learn factors for stock return prediction using the exotic parameter space introduced in the context section.
+s#+END_QUOTE
+
+The training dataset contains the returns of $50$ stocks over a period
+of $T = 753$ days. The number of factors and the depth of the window are
+fixed to $F=10$ and $D=250$, respectively.
+
+The optimisation objective is $\max_ {A,\beta}\text{Metric}(A,\beta)$
+where the metric is given by
+
+$$ \text{Metric}(A,\beta) = 
+\begin{cases}
+\frac 1m \sum_{d=D}^T \frac{\langle S_t,R_t\rangle}{|S_t||R_t|}, & |\langle A_ {\ell_1},A_ {\ell_2}\rangle - \delta_ {\ell_1,\ell_2}|<10^ {-6}\forall\ell_1,\ell_2=1,\ldots,F \\
+-1, & \text{otherwise}
+\end{cases} $$
+
+where $m = T - D = 504$.
+
 ** Solution Methods
 
 *** Sampling Stiefel Matrices Uniformly At Random
+
+The /QRT benchmark strategy/ samples $F$ orthonormal vectors
+$A_1,\ldots,A_F\in\mathbb{R}^D$ uniformly at random and fits the model
+parameters $\beta$ to the training dataset using linear regression,
+selecting the best outcome after many attempts. 
 
 *** The Exponential Map
 
